--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -28,12 +28,12 @@ Resources:
       InstanceType: t2.micro
       SecurityGroups:
         - Ref: InstanceSecurityGroup
-      KeyName: udapeople
+      KeyName: udapeople # B1. Create Infrastructure (1.a)
       # If this ami id is not available for you, you can find another (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/finding-an-ami.html)
       # Ubuntu 18 or higher works fine
       # Canonical, Ubuntu, 20.04 LTS, amd64 focal image build on 2022-06-10
       # Last update: 2022-07-09
-      ImageId: ami-0ddf424f81ddb0720
+      ImageId: ami-0ddf424f81ddb0720 # B1. Create Infrastructure (1.a)
       Tags:
         - Key: Name
           # Value used in aws ec2 describe-instances
