--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,6 +126,8 @@ commands:
 # JOBS
 jobs:
   # A. Deploying Trustworthy Software
+  # Ensure the Software is Trustworthy
+
   # A1. Build Phase
   # Check for syntax errors and unintentional typos
   build-frontend:
@@ -262,6 +264,9 @@ jobs:
       # - slack-success-notification
 
   # B Infrastructure Phase
+  # Infrastructure as Code (IaC)
+  # Execute CloudFormation templates that create infrastructure
+  # Execute Ansible playbooks to configure newly created infrastructure
 
   # Setup - AWS
 
@@ -348,7 +353,9 @@ jobs:
   # TYPEORM_DATABASE=postgres {or your postgres database name in RDS}Y_ID
   # https://circleci.com/docs/settings
 
-  # B1. Create Infrastructure (1.a)
+  # Add the TYPEORM environment variables to project/backend/.env
+
+  # B.1.a Create Infrastructure (1.a)
   # Create infrastructure using provided CloudFormation Templates in dir project/.circleci/files
   deploy-infrastructure:
     docker:
@@ -424,22 +431,20 @@ jobs:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-
-      # Here's where you will add some code to rollback on failure
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      # Success notification
+      # - slack-success-notification
       # Custom failure reason message
       - custom-failure-alert-message:
           custom_message:
             "Please ensure i) appropriate stack name with workflow id,
             ii) correct CircleCi workflow id referencing,
             iii) correct values in project/.circleci/files/backend.yml (AMI ID, KeyPair name) applicable to AWS account/region"
-      # Success notification
-      # - slack-success-notification
 
-  # B2. Configure Infrastructure (1.b)
+  # B.1.b Configure Infrastructure (1.b)
   # Set up EC2 instance to run as backend
   configure-infrastructure:
     docker:
@@ -485,16 +490,22 @@ jobs:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       # Custom failure reason message
       - custom-failure-alert-message:
-          custom_message: "Please ensure i) appropriate docker image,
-            ..."
+          custom_message: 
+          "Please ensure i) appropriate docker image and installed dependencies,
+          ii) correct fingerprint,
+          iii) correctly completed configure-server ansible playbook"
       # Success notification
       # - slack-success-notification
 
       # Tip:
       ## Check your CloudFormation console and manually delete the unnecessary stacks which are no longer required.
 
-  # C Deploy Phase
-  # C1. Database Migrations (2.a)
+  # B.2 Deploy Phase
+  # Now that infrastructure is up and running
+  # It's time to configure for dependencies 
+  # and move our applications files to the infra
+
+  # B.2.a Database Migrations (2.a)
   run-migrations:
     docker:
       # Docker image here that supports NodeJS
@@ -505,39 +516,50 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update --no-cache tar
-            apk add --update --no-cache gzip 
-            apk add --update --no-cache nodejs
-            apk add --update --no-cache npm
-            apk add --update --no-cache aws-cli
-            apk add --update --no-cache curl
+            apk add --update --no-cache tar gzip nodejs npm aws-cli curl
+      # Run migrations
+      # Save evidence (in migrations_dump.txt) of any new migrations run 
       - run:
           name: Run migrations
           command: |
-            # Your code here
             cd backend
             npm install
-            # Run and save the migration output
             npm run build
-            npm run migrations >> migrations_dump.txt
+            npm run migrations > migrations_dump.txt
+            cat migrations_dump.txt
+      # Send migration status to 3rd party key-value store
+      # migration output will include "...has been executed successfully" 
+      # if new migrations were applied
+
+      # Using kvdb.io
+      # In local terminal run the following:
+      # curl -d 'email=your_email_address' https://kvdb.io
+      # After running the command above you'll get a bucket ID xxxxxxxxxxxxxxxxxxxxxx
+      # Verify your email ID at your_email_address
+      # In step replace with applicable bucket ID "xxxxxxxxxxxxxxxxxxxxxx" geneated in local terminal
+
       - run:
           name: Send migration status to kvdb.io
           command: |
-            # Your code here
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-              # In local terminal run the following:
-              # curl -d 'email=your_email_address' https://kvdb.io
-              # After running the command above youo'll get a bucket ID xxxxxxxxxxxxxxxxxxxxxx
-              # Verify your email ID at your_email_address
-              # If you are using kvdb.io, generate the bucket ID "xxxxxxxxxxxxxxxxxxxxxx" in your local terminal first
-              #REPLACE_WITH_APPLICABLE
-              curl https://kvdb.io/HmnnciQC9qtfnJNaBpePv3/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1' 
+              curl https://kvdb.io/HmnnciQC9qtfnJNaBpePv3/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d 'SUCCESS'
+            else
+              curl https://kvdb.io/HmnnciQC9qtfnJNaBpePv3/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d 'FAILURE'
             fi
       # Here's where you will add some code to rollback on failure
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-
+      # Custom failure reason message
+      - custom-failure-alert-message:
+          custom_message: 
+          "Please ensure i) appropriate docker image and installed dependencies,
+          ii) migration status in text stored in correct place and correct path reference to it  
+          iii) bucket ID created in kvdb.io and referenced appropriately in storing success status"
+      # Success notification
+      # - slack-success-notification
+  
+  # B.2.b Deploy frontend (2.b)
   deploy-frontend:
     docker:
       # Docker image here that supports AWS CLI
@@ -551,20 +573,14 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            # your code here
             # Python, Ansible, Node, NPM, and AWS CLI.
             # Prefer to do these installations in multiple steps
-            apk add --update --no-cache tar
-            apk add --update --no-cache gzip 
-            apk add --update --no-cache curl
-            apk add --update --no-cache ansible
-            apk add --update --no-cache nodejs
-            apk add --update --no-cache npm
-            apk add --update --no-cache aws-cli
+            apk add --update --no-cache tar gzip curl ansible nodejs npm aws-cli
+      # Done before building front-end
+      # Because API_URL will be baked into front-end code
       - run:
           name: Get backend url
           command: |
-            # your code here
             export BACKEND_IP=$(aws ec2 describe-instances \
             --filter "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
             --query "Reservations[*].Instances[*].[PublicIpAddress]" \
@@ -573,10 +589,11 @@ jobs:
             echo "API_URL = ${API_URL}"
             echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
             cat frontend/.env
+      # Bake the backend url into the frontend
+      # Copy the files into new S3 bucket
       - run:
           name: Deploy frontend objects
           command: |
-            # your code here
             cd frontend
             npm install
             npm run build
@@ -587,7 +604,17 @@ jobs:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      # Custom failure reason message
+      - custom-failure-alert-message:
+          custom_message: 
+          "Please ensure i) appropriate docker image and installed dependencies,
+          ii) filter to describe backend ec2 URL matches with its definition in project/.circleci/files/backend.yml
+          iii) files copied to the correct S3 bucket its definition in project/.circleci/files/frontend.yml"
+      # Success notification
+      # - slack-success-notification
+      # URL02: Public URL for S3 bucket
 
+  # B.2.c Deploy backend (2.c)
   deploy-backend:
     docker:
       # Docker image here that supports Ansible
@@ -606,52 +633,59 @@ jobs:
           command: |
             # your code here
             # Install any necessary dependencies, such as tar, gzip, ansible, nodejs, and npm
-            apk add --update --no-cache tar
-            apk add --update --no-cache gzip 
-            apk add --update --no-cache curl
-            apk add --update --no-cache ansible
-            apk add --update --no-cache nodejs
-            apk add --update --no-cache npm
-            apk add --update --no-cache aws-cli
-            apk add --update --no-cache git
-            apk add --update --no-cache tree
-            apk add --update --no-cache openssh # auth
-            apk add --update --no-cache rsync #to move file
+            apk add --update --no-cache tar gzip curl ansible nodejs npm aws-cli git
+            apk add --update --no-cache openssh rsync
+      
+      # Install and build backend
+
+      # Zip the backend directory in home directory
+      # using Tape ARchive
+      # https://www.gnu.org/software/tar/manual/tar.html
+      # -C directory being zipped
+      # -c create new tar archive
+      # -z use gzip
+      # -v verbose show files worked on as tar running
+      # -f archive-name
+
+      # Use ansible to copy the zipped files and unpack them into EC2 once copied
+      # Complete relevant ansible playbook and roles
+      # .circleci/ansible/deploy-backend.yml and
+      # .circleci/ansible/roles/deploy/tasks/main.yml
+      # Extract zipped artifact into EC2 instance and start the app
+      # Tip:
+      # Read .circleci/ansible/roles/deploy/tasks/readme.md
       - run:
           name: Deploy backend
           command: |
-            # your code here
             cd backend
-            npm install
+            npm i
             npm run build
-
-            tree -aCf
-
             cd ..
-
-            # Zip the directory
             tar -C backend -czvf artifact.tar.gz .
-
-            # handle artifact location
-            ## make parent directory
-            mkdir  -p ~/project/.circleci/ansible/roles/deploy/files/
-
-            mv artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
-            cp ~/project/backend/.env .circleci/ansible/roles/deploy/files/backend.env
-
-
             cd .circleci/ansible
             echo "Contents  of the inventory.txt file is ------- \n"
             cat inventory.txt
-            # To see the full traceback, use -vvv
-            # Verbose
-            ansible-playbook -i inventory.txt deploy-backend.yml -vvv
+            ansible-playbook -i inventory.txt deploy-backend.yml 
       # Here's where you will add some code to rollback on failure
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      # Custom failure reason message
+      - custom-failure-alert-message:
+          custom_message: 
+          "Please ensure:
+          i) appropriate docker image and installed dependencies,
+          ii) correct fingerprint
+          iii) backend/.env file with relevant environment values that are also extracted into EC2 instance,
+          iv) correct reference to zipped backend artifact
+          v) zipped artifact extracted in correct destination."
+      # Success notification
+      # - slack-success-notification
 
+  # C Smoke Test Phase
+  # To catch errors that weren't spotted in previous steps
+  # Similar to going to site and testing manually and/or curl backend to make sure it is responding
   smoke-test:
     docker:
       # Lightweight Docker image
@@ -667,26 +701,13 @@ jobs:
             # your code here
             # Install dependencies like curl, nodejs, npm, or awscli.
             # no-cache to keep container small
-            apk add --update --no-cache curl 
-            apk add --update --no-cache tar 
-            apk add --update --no-cache gzip 
-            apk add --update --no-cache nodejs
-            apk add --update --no-cache npm
-            apk add --update --no-cache aws-cli 
+            apk add --update --no-cache curl tar gzip nodejs npm aws-cli 
             pip install awscli
-            apk add --update --no-cache openssh
-            apk add --update --no-cache rsync #to move files
-
+            apk add --update --no-cache openssh rsync  
       - run:
-          name: Backend smoke test.
+          name: Backend smoke test (hit backend API status endpoint).
           command: |
-            # your code here
-
             # Get backend url
-
-            printf "=%.0s"  $(seq 1 10)
-            echo -e "\n"
-
             export BACKEND_IP=$(aws ec2 describe-instances \
             --filter "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
             --query "Reservations[*].Instances[*].[PublicIpAddress]" \
@@ -694,21 +715,9 @@ jobs:
 
             echo "BACKEND_IP: ${BACKEND_IP}"
 
-            echo -e "\n"
-            printf "=%.0s"  $(seq 1 10)
-
-
             # Fetch and prepare the BACKEND_IP env var
-
-            printf "=%.0s"  $(seq 1 10)
-            echo -e "\n"
-
             export API_URL="http://${BACKEND_IP}:3030"
-
             echo "API_URL: ${API_URL}"
-
-            echo -e "\n"
-            printf "=%.0s"  $(seq 1 10)
 
             # No errors mean a successful test
             if curl "${API_URL}/api/status" | grep "ok"
@@ -732,44 +741,85 @@ jobs:
             else
                 return 1
             fi
+      # Custom smoke tests to build more confidence before promoting the new build to production
+      - run:
+          name: Backend smoke test (database domain).
+          command: |
+            if dig ${TYPEORM_HOST} | grep "status: NOERROR"
+            then
+                echo "\nPASS(NOERROR): DNS response received\n"
+                return 0
+            elif dig ${TYPEORM_HOST} | grep "status: NXDOMAIN"
+            then
+                echo "\nFAIL(NXDOMAIN): Non-Existent Domain\n"
+                return 1
+            else
+                echo "\nFAIL: start investigating failure reason below\n"
+                dig ${TYPEORM_HOST}
+                echo "\nNSLOOKUP\n"
+                nslookup -debug ${TYPEORM_HOST}
+                return 1
+            fi
+      - run:
+          name: Backend smoke test (database connection on port 5432 of endpoint).
+          command: |
+            if sleep 3 | telnet ${TYPEORM_HOST} 5432 | grep "Connected to"
+            then
+                # echo "^]" # escape character (close connection)
+                echo "\nPASS: Can connect to TYPEORM_HOST on port 5432\n"
+                return 0
+            else
+                echo "\nFAIL: check endpoint name and configuration (inbound rules etc.)\n"
+                telnet ${TYPEORM_HOST} 5432
+                return 1
+            fi
+
       # Here's where you will add some code to rollback on failure
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      # Custom failure reason message
+      - custom-failure-alert-message:
+          custom_message: 
+          "If backend failed smoke test please investigate further using methods such as:
+          ssh into the EC2 instance (ssh -i /path/key-pair-name.pem instance_user_name@instance_public_dns_name) then view production process manager logs (sudo pm2 logs)"
+      # Success notification
+      # - slack-success-notification
 
-  cloudfront-update:
-    docker:
-      # Docker image here that supports AWS CLI
-      - image: python:3.10-alpine3.16
-    steps:
-      # Checkout code from git
-      - checkout
-      - run:
-          name: Install dependencies
-          command: |
-            # your code here
-            apk add --update --no-cache curl 
-            apk add --update --no-cache tar 
-            apk add --update --no-cache gzip 
-            apk add --update --no-cache aws-cli 
-            pip install awscli
-      - run:
-          name: Update cloudfront distribution
-          command: |
-            # your code here
-            # Change the initial stack name, as applicable to you
-            aws cloudformation deploy \
-                    --template-file .circleci/files/cloudfront.yml \
-                    --stack-name InitialStack \
-                    --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
-                    --tags project=udapeople
 
-      # Here's where you will add some code to rollback on failure
-      - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert-migrations:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+  # cloudfront-update:
+  #   docker:
+  #     # Docker image here that supports AWS CLI
+  #     - image: python:3.10-alpine3.16
+  #   steps:
+  #     # Checkout code from git
+  #     - checkout
+  #     - run:
+  #         name: Install dependencies
+  #         command: |
+  #           # your code here
+  #           apk add --update --no-cache curl 
+  #           apk add --update --no-cache tar 
+  #           apk add --update --no-cache gzip 
+  #           apk add --update --no-cache aws-cli 
+  #           pip install awscli
+  #     - run:
+  #         name: Update cloudfront distribution
+  #         command: |
+  #           # your code here
+  #           # Change the initial stack name, as applicable to you
+  #           aws cloudformation deploy \
+  #                   --template-file .circleci/files/cloudfront.yml \
+  #                   --stack-name InitialStack \
+  #                   --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
+  #                   --tags project=udapeople
+
+  #     # Here's where you will add some code to rollback on failure
+  #     - destroy-environment:
+  #         workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+  #     - revert-migrations:
+  #         workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
 # cleanup:
 #   docker:
@@ -820,16 +870,16 @@ workflows:
           filters:
             branches:
               only: [master, features-defaultInfra]
-      # - configure-infrastructure:
-      #     requires: [deploy-infrastructure]
-      # - run-migrations:
-      #     requires: [configure-infrastructure]
-      # - deploy-frontend:
-      #     requires: [run-migrations]
-      # - deploy-backend:
-      #     requires: [run-migrations]
-      # - smoke-test:
-      #     requires: [deploy-backend, deploy-frontend]
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]
+      - run-migrations:
+          requires: [configure-infrastructure]
+      - deploy-frontend:
+          requires: [run-migrations]
+      - deploy-backend:
+          requires: [run-migrations]
+      - smoke-test:
+          requires: [deploy-backend, deploy-frontend]
       # - cloudfront-update:
       #     requires: [smoke-test]
       # - cleanup:
